<resources>

    <string name="rate_trip">Rate Trip</string>
    <string name="destination">Destination</string>
    <string name="select_starting_date">Select Starting Date</string>
    <string name="start_date">Start Date</string>
    <string name="select_ending_date">Select Ending Date</string>
    <string name="end_date">End Date</string>
    <string name="save">Save</string>
    <string name="trip_price">Price</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_trip">create trip</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="add_button">Add button</string>
    <string name="create">create</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="sign_in">Sign In</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_share">Share</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="photo_uploaded">Photo Uploaded</string>
    <string name="tripName">Trip name</string>
    <string name="tripType">Trip type</string>
    <string name="tripPrice">Trip price</string>
    <string name="tripRating">Trip rating</string>
    <string name="update_trip">Update trip</string>
    <string name="add_trip">Add trip</string>
    <string name="start_date_view_trip">Start Date:</string>
    <string name="end_date_view_trip">End Date:</string>
    <string name="facebook_app_id">792085102295775</string>
    <string name="facebook_login_protocol_scheme">fb1384115388440773</string>
    <string name="travel_journale">TRAVEL JOURNALE</string>
    <string name="about_us">WE ARE HERE TO HELP YOU ENJOYING YOUR TRAVELS</string>
    <string name="separator">separator</string>
    <string name="contact">Contact</string>
    <string name="about_us_information">About us</string>
    <string name="back_button">back button</string>
    <string name="text">Text</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="author_name">Pacioianu Alexandru</string>
    <string name="share_trip">Share trip</string>
    <string name="update_activity_name">Update</string>
    <string name="user_name">Pacioianu Alexandru</string>
    <string name="user_email">pacioianu.alexandru13@gmail.com</string>
    <string name="email_address">journeystoremember@gmail.com</string>
    <string name="phone_number">0765789976</string>
    <string name="trip_name">Trip Name</string>
    <string name="starting_trip_date">Starting Trip date</string>
    <string name="ending_trip_dare">Ending Trip Dare</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="temperature">temperature</string>
    <string name="trip_image_view">trip image view</string>
    <string name="weather">weather</string>
    <string name="trip_type1">City Break</string>
    <string name="trip_type2">Sea Side</string>
    <string name="trip_type3">Mountains</string>
    <string name="eur">EUR</string>
    <string name="select_image_from_gallery">Select Image From Gallery</string>


</resources>